[gpo-reliability] Batch 4: Targeted validation — measuring improvement evidence
Results:
- regression clean: YES (10/10)
- live_observed signals: 10→11 (+1: learning engine)
- live output events: 37→47 (+10 from real workflow completions)
- engine attribution: 8/10 new tasks correctly routed (2 missed: hip flexor→general, executive presence→general)
- docs readability: improved in Batch 3
- cost/context reuse: no measurable change yet

Remaining routing gaps to fix:
- "hip flexor" needs to route to health
- "executive presence" needs to route to careeregine

Signal provenance: 18 seeded, 11 live, 3 explicit_profile
Total: 1326 tasks, 1274 done

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>